tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__GeneticSampler-AAAAAAAAAAAAAAAAAAAB_Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 509,
  "prerequisites": [
    510
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With this machine, you can extract a random trait from any bee, sapling, butterfly or flower. The bee/sapling/butterfly/flower will be destroyed in this process. Each process requires an empty gene sample and some labware.\n\nThe resulting sample is random, so make sure to recycle the extra gene samples you don't want.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Genetic Sampler",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    510
  ],
  "rewards": [],
  "tasks": []
}
