tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__GeneticTranspose-AAAAAAAAAAAAAAAAAAACAA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 512,
  "prerequisites": [
    510
  ],
  "properties": {
    "auto_claim": false,
    "desc": "DNA samples of species and/or traits are pretty valuable. You always should keep at least one of each gene sample you get your hand on in a chest somewhere safe. By using this machine, you are able to copy any gene sample, for the cost of an empty serum vial and some labware.\n\n[note]You don't actually need to keep all of them if you don't intend to use them of course.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Genetic Transposer",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    510
  ],
  "rewards": [],
  "tasks": []
}
